# Vault-Collector-Pro

./: .gitignore  AGENTS.md  MILESTONE3_README.md  MILESTONE4_README.md  README.md  Vault_Collectors_Catalogue_FIXED.html  install-milestone3.sh  install-milestone4.sh  package-lock.json  package.json
.github/workflows/: ci.yml  mobile-pages.yml
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
apps/desktop/e2e/: wdio.conf.mjs
apps/desktop/src/: App.tsx  capture.css  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_platform.sql  0003_capture_intelligence.sql  0004_valuation_marketplace.sql  0005_inventory_intelligence.sql  0005_storage_pricing_adapters.sql  0006_mobile_intelligence.sql  0007_category_schema_management.sql
apps/desktop/src-tauri/src/: background.rs  lib.rs  main.rs  vision.rs
apps/desktop/src-tauri/src/db/: intelligence.rs  items.rs  mod.rs  models.rs
apps/desktop/src-tauri/tests/: intelligence_repository.rs  item_repository.rs
apps/mobile/: capacitor.config.ts  index.html  package.json  vite.config.ts
apps/mobile/src/: App.test.tsx  App.tsx  main.tsx  styles.css
docs/: mobile-device-testing.md
docs/plans/: 2026-07-14-storage-rules-background-indexing-design.md  2026-07-14-storage-rules-background-indexing-plan.md
docs/releases/: 0.5-capture-intelligence.md  0.7-inventory-intelligence.md  0.8-mobile-intelligence.md
docs/superpowers/plans/: 2026-07-13-storage-pricing-adapters.md  (+6 more)
(+72 files in other folders)
