[package]
name = "vault-catalogue"
version = "0.1.0"
description = "Private local-first valuable item catalogue"
authors = ["Wolfe"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "vault_catalogue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vault-catalogue"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
